WP-8845 Fixes to the spacing the button

--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -430,8 +430,11 @@
         .field-voices-stay-in-touch-cta
           a.cta
             color: $text-green
+            margin-top: 0
             &:hover
               color: $text-green
+        .field-name-voices-ct-background-rail
+          margin-bottom: 30px
         fieldset.group-wrapper-related
           margin-top: 30px
           .fieldset-wrapper
